// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object with all media 1`] = `
Array [
  Object {
    "@media screen and (max-width: 640px)": Object {
      "a": "xs",
    },
    "@media screen and (min-width: 1024px)": Object {
      "a": "lg",
    },
    "@media screen and (min-width: 1280px)": Object {
      "a": "xl",
    },
    "@media screen and (min-width: 1536px)": Object {
      "a": "2xl",
    },
    "@media screen and (min-width: 640px)": Object {
      "a": "sm",
    },
    "@media screen and (min-width: 768px)": Object {
      "a": "md",
    },
    "a": "a",
  },
]
`;

exports[`object with all media with styleObjectOnly option 1`] = `
Array [
  Object {
    "@media screen and (maxWidth: 640px)": Object {
      "a": "xs",
    },
    "@media screen and (minWidth: 1024px)": Object {
      "a": "lg",
    },
    "@media screen and (minWidth: 1280px)": Object {
      "a": "xl",
    },
    "@media screen and (minWidth: 1536px)": Object {
      "a": "2xl",
    },
    "@media screen and (minWidth: 640px)": Object {
      "a": "sm",
    },
    "@media screen and (minWidth: 768px)": Object {
      "a": "md",
    },
    "a": "a",
  },
]
`;

exports[`string with all media 1`] = `
"{
    a: 'a',
    @media screen and (max-width: 640px) { a: 'xs' }
    @media screen and (min-width: 640px) { a: 'sm' }
    @media screen and (min-width: 768px) { a: 'md' }
    @media screen and (min-width: 1024px) { a: 'lg' }
    @media screen and (min-width: 1280px) { a: 'xl' }
    @media screen and (min-width: 1536px) { a: '2xl' }
  }"
`;
